# mcp-server-linemetrics

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mcp_server_linemetrics/: __init__.py  server.py
tests/: test_server.py
