[project]
name = "mcp-server-linemetrics"
version = "0.1.0"
description = "MCP server for the LineMetrics REST API — access devices, sensors, and timeseries data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Bruno Bruhn" }]
keywords = ["mcp", "linemetrics", "iot", "timeseries", "sensors"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-server-linemetrics = "mcp_server_linemetrics.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_linemetrics"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
]
